# technical-services-solutions

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS.txt  CONTRIBUTING.md  LICENSE-THIRD-PARTY.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  release.yml  test-deploy.yml
core-platform/: README.md
core-platform/cicd/dabs-migrator/: .gitignore  CHANGELOG.md  README.md
core-platform/serverless/: README.md
core-platform/serverless/budget-policy-drift-tracker/: Budget Policy Drift Tracker(with Test Data).ipynb  Budget Policy Drift Tracker.ipynb
data-engineering/: README.md
data-engineering/sdp-evolution/: .gitignore  README.md  databricks.yml
data-engineering/sdp-evolution/resources/: pipeline.yml  seed_jobs.yml  test_job.yml  uc.yml
data-engineering/sdp-evolution/src/: generate_data.py  pipeline.py  reconcile.py  seed_data.py
data-engineering/sdp-evolution/tests/: test_reconcile_notebook.py
data-governance/: README.md
data-governance/uc-quickstart/: README.md
data-governance/uc-quickstart/azure/: .gitignore  README.md  dev_env.tf  env_variables.sh.example  prod_env.tf  provider.tf  variables.tf  (+1 more)
data-warehousing/: README.md
data-warehousing/dbrx-business-semantics/: 0_IngestData.ipynb  1_CreateMetricView.ipynb  2_QueryMetricView.ipynb  3_MaterializeMetricView.ipynb  README.md
data-warehousing/dbrx-metric-views/: 0_IngestData.ipynb  1_CreateMetricView.ipynb  2_QueryMetricView.ipynb  3_MaterializeMetricView.ipynb  README.md
data-warehousing/genie-cicd/: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  databricks.yml.template
data-warehousing/genie-helpers/: Genie Feedback Extraction.ipynb  Genie Space Conversation Duration Logger.ipynb  LLM Column Comment Generator.ipynb  Manage Genie Space Permissions.ipynb  README.md  UC Governance Explorer - Tags Comments Lineage.ipynb
data-warehousing/genie-room-creation/: Create Genie Space with Widgets.ipynb
data-warehousing/lakebridge-analyzer-examples/: README.md
data-warehousing/lakebridge-analyzer-lineage/: README.md  app.yaml  databricks.yaml  databricks.yml  package.json  requirements.txt  setup.py
data-warehousing/lakebridge-profiler-examples/: README.md
data-warehousing/lakebridge-reconcile-utilities/: README.md
data-warehousing/lakebridge-transpiler-utilities/: README.md
data-warehousing/lakebridge-utilities/: README.md
data-warehousing/pbi-aibi-converter/: .gitignore  README.md
docs/technical-services-solutions/: docusaurus.config.ts  package-lock.json  package.json
genai-ml/: README.md
launch-accelerator/: README.md
launch-accelerator/budget-policy-drift-tracker/: README.md
workspace-setup/: README.md
workspace-setup/managed-vnet-to-vnet-injection-automation/: README.md  create_databricks_vnet.ps1  update_databricks_vnet.ps1
workspace-setup/pulumi-examples/: README.md
workspace-setup/terraform-checker/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CUSTOMER_QUICKSTART.md  LICENSE  README.md  README_PORTUGUESE.md  cli.py  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh  suggested-policy.json
workspace-setup/terraform-checker/checkers/: __init__.py  aws.py  azure.py  base.py  databricks_actions.py  gcp.py  permissions.py
workspace-setup/terraform-checker/config/: __init__.py  schema.py
workspace-setup/terraform-checker/config/permissions/: aws.yaml  azure.yaml  gcp.yaml
workspace-setup/terraform-checker/reporters/: __init__.py  checklist_aws.py  json_reporter.py  markdown_reporter.py  txt_reporter.py
workspace-setup/terraform-checker/tests/: __init__.py  test_aws_checks.py  test_azure_checks.py  test_cli_smoke.py  test_config_loader.py  test_denial.py  test_error_handlers.py  test_gcp_checks.py  test_markdown_reporter.py  test_permission_loader.py  test_permissions_integration.py  test_reporters.py  test_schema_validation.py
workspace-setup/terraform-checker/utils/: __init__.py  config_loader.py  credential_loader.py  denial.py  error_handlers.py  exit_codes.py  logger.py  permission_loader.py
workspace-setup/terraform-examples/: README.md
(+469 files in other folders)
