[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-terraform-precheck"
version = "1.0.0"
description = "Pre-flight checker for Databricks Terraform deployments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Databricks Field Engineering"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["databricks", "terraform", "aws", "azure", "gcp", "permissions", "precheck"]

dependencies = [
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-keyvault>=10.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-privatedns>=1.0.0",
    "azure-mgmt-compute>=30.0.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-compute>=1.14.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-kms>=2.21.0",
    "google-api-python-client>=2.111.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
dbx-precheck = "main:cli"

[project.urls]
"Homepage" = "https://github.com/databricks/terraform-precheck"
"Bug Tracker" = "https://github.com/databricks/terraform-precheck/issues"
"Documentation" = "https://github.com/databricks/terraform-precheck#readme"

# Ruff configuration (fast Python linter)
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument (common in abstract methods)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]

[tool.ruff.isort]
known-first-party = ["checkers", "reporters", "utils", "config"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "azure.*",
    "google.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (require credentials)",
    "slow: marks tests as slow",
]

# Coverage configuration
[tool.coverage.run]
source = ["checkers", "reporters", "utils", "config"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

